[workspace]

resolver = "2"

members = [
  "odin_build",
  "odin_common",  
  "odin_job",
  "odin_action",
  "odin_actor",
  "odin_macro",
  "odin_server",
  "odin_share",
  "odin_cesium",
  "odin_gdal",
  "odin_dem",
  "odin_hrrr",
  "odin_windninja",

  "odin_sentinel",
  "odin_goesr",
  "odin_orbital",
  "odin_live",
  "gpshub",

  "opendata_splitter",
  "mkslides",
  "servedoc",
  "webrun"
, "odin_geolayer"]

[workspace.dependencies]

odin_build  = { version = "*", path = "odin_build" }
odin_common = { version = "*", path = "odin_common" }
odin_macro  = { version = "*", path = "odin_macro" }
odin_gdal   = { version = "*", path = "odin_gdal" }
odin_action = { version = "*", path = "odin_action" }
odin_actor  = { version = "*", path = "odin_actor" }
odin_job    = { version = "*", path = "odin_job" }
odin_server = { version = "*", path = "odin_server" }
odin_share  = { version = "*", path = "odin_share" }
odin_cesium = { version = "*", path = "odin_cesium" }
odin_goesr  = { version = "*", path = "odin_goesr" }
odin_orbital = { version = "*", path = "odin_orbital" }
odin_sentinel = { version = "*", path = "odin_sentinel" }

# external crates for which we have to ensure the same version
axum = { version = "0.8.1", features = [ "http2", "ws", "macros"] }
reqwest = { version = "0.12.8", features = ["json", "stream"] }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31", features = ["sink"] }
async-trait = { version = "0.1.83" }
tokio = { version = "1.44.1", features = ["full", "tracing"] }
#tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls"] }
rustls = { version = "0.23.25" }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140" }
ron = { version = "0.9.0" }
uom = { version = "0.36.0", features = ["serde", "f32", "i64"] }
num = { version = "0.4.3" }
chrono = { version = "0.4.40", features = ["serde"] }
thiserror = { version = "1.0.64" }
anyhow = { version = "1.0.97" }
gdal = { version = "0.17.1", features = ["array"] }
gdal-sys = { version = "0.10.0", features = ["bindgen"]}
geo = { version = "0.30.0" }
nalgebra = { version = "0.33.2"}
lazy_static = { version = "1.5.0" }
structopt = { version = "0.3.26" }
paste = { version ="1.0.15" }
regex = { version = "1.11.1" }
hashbrown = { version = "0.15.2" }


[profile.release]

codegen-units = 1
lto = "fat"
strip = "debuginfo"
