[workspace]
resolver = "2"

members = [
  "odin_build",
  "odin_common",  
  "odin_job",
  "odin_action",
  "odin_actor",
  "odin_macro",
  "odin_server",
  "odin_share",
  "odin_cesium",
  "odin_gdal",
  "odin_dem",
  "odin_hrrr",
  "odin_wind",
  "odin_geolayer",
  "odin_sentinel",
  "odin_goesr",
  "odin_orbital",
  "odin_adsb",
  "odin_live",
  "odin_n5",
  
  "gpshub",
  "opendata_splitter",
  "mkslides",
  "servedoc",
  "webrun"
]

[workspace.dependencies]

odin_build  = { version = "*", path = "odin_build" }
odin_common = { version = "*", path = "odin_common" }
odin_macro  = { version = "*", path = "odin_macro" }
odin_gdal   = { version = "*", path = "odin_gdal" }
odin_action = { version = "*", path = "odin_action" }
odin_actor  = { version = "*", path = "odin_actor" }
odin_job    = { version = "*", path = "odin_job" }
odin_server = { version = "*", path = "odin_server" }
odin_share  = { version = "*", path = "odin_share" }
odin_cesium = { version = "*", path = "odin_cesium" }
odin_goesr  = { version = "*", path = "odin_goesr" }
odin_orbital = { version = "*", path = "odin_orbital" }
odin_sentinel = { version = "*", path = "odin_sentinel" }
odin_geolayer = { version = "*", path = "odin_geolayer" }
odin_hrrr   = { version = "*", path = "odin_hrrr" }
odin_dem    = { version = "*", path = "odin_dem" }
odin_wind   = { version = "*", path = "odin_wind" }
odin_adsb  = { version = "*", path = "odin_adsb" }
odin_n5     = { version = "*", path = "odin_n5" }

# external crates for which we have to ensure the same version
axum = { version = "0.8.4", features = [ "http2", "ws", "macros"] }
reqwest = { version = "0.12.22", features = ["json", "stream"] }
reqwest-middleware = { version = "0.4.2" }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
http = { version = "1.3.1" }
url = { version = "2.5.4" }
bytes = { version = "1.10.1" }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31", features = ["sink"] }
async-trait = { version = "0.1.88" }
tokio = { version = "1.46.1", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
#tokio-tungstenite = { version = "0.27.0", features = ["rustls"] } # this requires to explicitly handle certificates
tokio-util = { version = "0.7.15", features = ["full"] }
rustls = { version = "0.23.27" }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140" }
serde_with = { version = "3.12.0" }
ron = { version = "0.10.1" }
uom = { version = "0.37.0", features = ["serde", "f32", "i64"] }
num = { version = "0.4.3" }
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.98" }
gdal = { version = "0.18.0", features = ["array"] }
gdal-sys = { version = "0.11.0", features = ["bindgen"]}
geo = { version = "0.30.0" }
geo-types = { version = "0.7.16" }
nalgebra = { version = "0.33.2"}
lazy_static = { version = "1.5.0" }
structopt = { version = "0.3.26" }
paste = { version ="1.0.15" }
regex = { version = "1.11.1" }
hashbrown = { version = "0.15.3" }
bit-set = { version = "0.8.0" }
ndarray = { version = "0.16.1" }
flate2 = { version = "1.1.2" }
memchr = { version = "2.7.5" }
clap = { version = "4.5.41", features = ["derive"]}
dashmap = { version = "6" }


[profile.release]

codegen-units = 1
lto = "fat"
strip = "debuginfo"
