[workspace]
resolver = "2"

members = [
  "odin_build",
  "odin_common",  
  "odin_job",
  "odin_action",
  "odin_actor",
  "odin_macro",
  "odin_server",
  "odin_share",
  "odin_cesium",
  "odin_gdal",
  "odin_dem",
  "odin_hrrr",
  "odin_wind",
  "odin_geolayer",
  "odin_sentinel",
  "odin_goesr",
  "odin_orbital",
  "odin_adsb",
  "odin_live",
  "odin_n5",
  "odin_alertca",
  "odin_onnx",
  "odin_fires",
  
  "gpshub",
  "mkslides",
  "servedoc",
  "webrun"
]

[workspace.dependencies]

odin_build  = { version = "*", path = "odin_build" }
odin_common = { version = "*", path = "odin_common" }
odin_macro  = { version = "*", path = "odin_macro" }
odin_gdal   = { version = "*", path = "odin_gdal" }
odin_action = { version = "*", path = "odin_action" }
odin_actor  = { version = "*", path = "odin_actor" }
odin_job    = { version = "*", path = "odin_job" }
odin_server = { version = "*", path = "odin_server" }
odin_share  = { version = "*", path = "odin_share" }
odin_cesium = { version = "*", path = "odin_cesium" }
odin_goesr  = { version = "*", path = "odin_goesr" }
odin_orbital = { version = "*", path = "odin_orbital" }
odin_sentinel = { version = "*", path = "odin_sentinel" }
odin_geolayer = { version = "*", path = "odin_geolayer" }
odin_hrrr   = { version = "*", path = "odin_hrrr" }
odin_dem    = { version = "*", path = "odin_dem" }
odin_wind   = { version = "*", path = "odin_wind" }
odin_adsb  = { version = "*", path = "odin_adsb" }
odin_n5     = { version = "*", path = "odin_n5" }
odin_alertca = { version = "*", path = "odin_alertca" }
odin_onnx = { version = "*", path = "odin_onnx" }
odin_fires = { version = "*", path = "odin_fires" }

# external crates for which we have to ensure the same version
axum = { version = "0.8.6", features = [ "http2", "ws", "macros"] }
axum-login = { version = "0.18" }
password-auth = { version = "1.0.0" }
passwords = { version = "3.1" }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
reqwest-middleware = { version = "0.4.2" }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tower-sessions = { version = "0.14.0", default-features = false, features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["sqlite", "time", "runtime-tokio"] }
http = { version = "1.3.1" }
http-cache-reqwest = { version = "0.16.0" }
cacache = { version = "13.1.0" }
headers = { version = "0.4.1" }
url = { version = "2.5.4" }
bytes = { version = "1.10.1" }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31", features = ["sink"] }
async-trait = { version = "0.1.88" }
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
#tokio-tungstenite = { version = "0.28.0", features = ["rustls"] } # this requires to explicitly handle certificates
tokio-util = { version = "0.7.16", features = ["full"] }
kanal = { version = "0.1.1", features = ["async"] } # TODO - do we want to promote this to workspace? What about flume?
rustls = { version = "0.23.32" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.145" }
serde_with = { version = "3.12.0" }
ron = { version = "0.12.0" }
uom = { version = "0.37.0", features = ["serde", "f32", "i64"] }
num = { version = "0.4.3" }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.99" }

#gdal = { version = "0.18", features = ["array", "bindgen"] }  # <<< reinstate when a new crate version is released
#gdal-sys = { version = "0.11", features = ["bindgen"]}        # <<< reinstate when a new crate version is released
gdal = { git = "https://github.com/georust/gdal.git", features = ["array", "bindgen"] } # required as of 11/20/25 for GDAL 3.12.0  (gdal v0.18.0 does not compile)
gdal-sys = { git = "https://github.com/georust/gdal.git", features = ["bindgen"] }

geo = { version = "0.31.0" }
geo-types = { version = "0.7.17" }
geojson = { version = "0.24.2" }
nalgebra = { version = "0.34.1"}
lazy_static = { version = "1.5.0" }
paste = { version ="1.0.15" }
regex = { version = "1.11.1" }
hashbrown = { version = "0.16.0" }
bit-set = { version = "0.8.0", features = ["serde"] }
ndarray = { version = "0.17.0" }
flate2 = { version = "1.1.4" }
miniz_oxide = { version = "0.8.9" }
memchr = { version = "2.7.5" }
clap = { version = "4.5.49", features = ["derive"]}

dashmap = { version = "6.1.0" }
trait-set = { version = "0.3.0" } # remove when trait aliases become stabilized
tracing-subscriber = { version = "0.3.20" }
tracing = { version = "0.1.41"}
glob = { version = "0.3.3" }
globset = { version = "0.4.16" }
rand = { version = "0.9.2" }
zip = { version = "6.0.0"}
image = { version = "0.25.8" }



[profile.release]

codegen-units = 1
lto = "fat"
strip = "debuginfo"
