[package]
name = "gpshub"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
warp = "0.3.7"
structopt = { workspace = true }
socket2 = { version = "0.5.9", features = ["all"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Packages that are actually required inspite of machete report.
[package.metadata.cargo-machete]
ignored = ["serde_json"]
