cargo-features = ["edition2024"]

[package]
name = "odin_actor"
version = "0.4.0"
edition = "2024"

#[build]
#rustflags = ["--cfg", "tokio_unstable", "-Ctarget-cpu=native"]


[dependencies]
tokio = { version = "*", features = ["full", "tracing"], optional = true }
kanal = { version = "0.1.0-pre8", features = ["async"], optional = true }
flume = { version = "*", features = ["default", "spin"], optional = true }

futures = "*"
thiserror = "*"
anyhow = "*"
ron = "*"
serde = { version = "*", features = ["derive"] }
parse_duration = "*"
colored = "*"
#quanta = "*"
paste = "*"

tracing = "*"
tracing-subscriber = "*"
console-subscriber = "*"

odin_macro = { workspace = true }
odin_config = { workspace = true }
odin_job = { workspace = true }

[features]
default = ["tokio_kanal"]
#default = ["tokio_flume"]
tokio_kanal = ["dep:tokio", "dep:kanal"]
tokio_flume = ["dep:tokio", "dep:flume"]


