[package]
name = "odin_actor"
version = "0.4.0"
edition = "2024"

#[build]
#rustflags = ["--cfg", "tokio_unstable", "-Ctarget-cpu=native"]


[dependencies]
tokio = { version = "*", features = ["full", "tracing"], optional = true }
kanal = { version = "0.1.0-pre8", features = ["async"], optional = true }
flume = { version = "*", features = ["default", "spin"], optional = true }

ratatui = { version = "0.28.1", features = ["all-widgets", "serde"], optional = true }
crossterm = { version = "0.28.1", features = ["event-stream"], optional = true }

anyhow = "*"
parse_duration = "*"
colored = "*"
#quanta = "*"
paste = "*"
lazy_static = "*"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
console-subscriber = "0.4.0"

odin_build = { workspace = true }
odin_macro = { workspace = true }
odin_job = { workspace = true }
odin_action = { workspace = true }
odin_common = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ron = { workspace = true }

[features]
default = ["tokio_kanal"]
#default = ["tokio_flume"]
tokio_kanal = ["dep:tokio", "dep:kanal"]
tokio_flume = ["dep:tokio", "dep:flume"]
tui = ["dep:ratatui", "dep:crossterm"]
embedded_resources = []


