[package]
name = "odin_actor"
version = "0.4.0"
edition = "2024"

#[build]
#rustflags = ["--cfg", "tokio_unstable", "-Ctarget-cpu=native"]


[dependencies]
tokio = { workspace = true }
kanal = { version = "0.1.1", features = ["async"], optional = true }
flume = { version = "0.11.1", optional = true } # async is default

ratatui = { version = "0.29.0", features = ["all-widgets", "serde"], optional = true }
crossterm = { version = "0.29.0", features = ["event-stream"], optional = true }

anyhow = { workspace = true }
parse_duration = "*"
colored = "*"
#quanta = "*"
paste = { workspace = true }
lazy_static = { workspace = true }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
console-subscriber = "0.4.1"

odin_build = { workspace = true }
odin_macro = { workspace = true }
odin_job = { workspace = true }
odin_action = { workspace = true }
odin_common = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ron = { workspace = true }
trait-set = "0.3.0"

[features]
default = ["tokio_kanal"]
#default = ["tokio_flume"]
tokio_kanal = ["dep:kanal"]
tokio_flume = ["dep:flume"]
tui = ["dep:ratatui", "dep:crossterm"]
embedded_resources = []


