[package]
name = "odin_adsb"
version = "0.1.0"
edition = "2024"


[dependencies]
lazy_static = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true, features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
memchr = { workspace = true }
uom = { workspace = true }
dashmap = { workspace = true }

structopt = { workspace = true } # replace

odin_common = { workspace = true }
odin_actor = { workspace = true }
odin_build = { workspace = true }
odin_macro = { workspace = true }
odin_action = { workspace = true }
odin_server = { workspace = true }
odin_cesium = { workspace = true }

# Packages that are actually required inspite of machete report.
[package.metadata.cargo-machete]
ignored = ["lazy_static", "structopt"]

[features]
## inline crate-specific resources (configs and assets) into the executable (see odin_build)
embedded_resources = []
