[package]
name = "odin_alertca"
version = "0.1.0"
edition = "2024"

build = "../build_resources.rs"

[dependencies]
# our ODIN crates
odin_build = { workspace = true }
odin_action = { workspace = true }
odin_actor = { workspace = true }
odin_server = { workspace = true }
odin_cesium = { workspace = true }
odin_common = { workspace = true }
odin_macro = { workspace = true }
odin_dem = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
chrono = { workspace = true }
uom = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
ron = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
http = { workspace = true }

structopt = { workspace = true } # replace

[build-dependencies]
odin_build = { workspace = true }

[features]
embedded_resources = []

# Packages that are actually required inspite of machete report.
[package.metadata.cargo-machete]
ignored = ["lazy_static", "odin_action", "structopt"]

# [profile.release]
# debug = 1  # better build with RUSTFLAGS=-g
