[package]
name = "odin_build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bob"

[dependencies]
lazy_static = "*"
anyhow = "*"
toml = "0.8.19"
cargo_toml = "0.20.5"
bytes = "1.9.0"
flate2 = "*"
brotli = "*"
minifier = "*"
minify-html-onepass = "*"

rand = "*"
pgp = "*"
magic-crypt = "*"

thiserror = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }