[package]
name = "odin_build"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bob"

[dependencies]
lazy_static = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }

toml = "0.9.5"
cargo_toml = "0.22.3"
flate2 = "1.1.1"
brotli = "8.0.2"
minifier = "0.3.6"
minify-html-onepass = "0.16.4"

# pgp = "0.14.2"
magic-crypt = "4.0.1"

