[package]
name = "odin_common"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "get_files"
path = "src/bin/get_files.rs"

[[bin]]
name = "duplicate_dir"
path = "src/bin/duplicate_dir.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
num = { workspace = true }
nalgebra = { workspace = true }
geo = { workspace = true }
uom = { workspace = true }
thiserror = { workspace = true }
parse_duration = "*"
reqwest = { workspace = true, features = ["blocking"] }
lazy_static = "*"
ctrlc = { version = "*", features = ["termination"] }
tokio = { workspace = true }
structopt = "*"
gethostname = "*"
regex = "*"
num-format = "*"
anyhow = "*"
globset = "0.4.15"
nav-types = "0.5.2"

aws-config = { version = "*", features = ["behavior-version-latest"], optional = true }
aws-sdk-s3 = { version = "*", features = ["rt-tokio"], optional = true }
aws-smithy-types = { version = "*", features = ["serde-serialize"], optional = true }
aws-smithy-types-convert = { version = "*", features = ["convert-chrono"], optional = true }
aws-smithy-runtime-api = { version = "*", optional = true }

dhat = { version = "*", optional = true }

# used by aws-smithy in version 0.6.5, which runs into a "unknown feature stdarch_arm_crc32" error with newer nightly toolchains
# the alternative is to revert to an older toolchain with a rust-toolchain.toml but then we need to install all tools (such
# as rust-analyzer) for it too.
crc32c = { version = "0.6.7", optional = true }

odin_build = { workspace = true }

[build-dependencies]
odin_build = { workspace = true }

[features]
s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:aws-smithy-types-convert", "dep:aws-smithy-runtime-api", "dep:aws-smithy-types", "dep:crc32c"]
slack_admin = []
dhat = ["dep:dhat"]

[package.metadata.odin_configs]
slack_admin = { file = "slack_admin.ron" }