[package]
name = "odin_common"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "get_files"
path = "src/bin/get_files.rs"

[[bin]]
name = "duplicate_dir"
path = "src/bin/duplicate_dir.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
num = { workspace = true }
nalgebra = { workspace = true }
ndarray = { workspace = true }
geo = { workspace = true }
geo-types = { workspace = true }
uom = { workspace = true }
thiserror = { workspace = true }
parse_duration = "2.1.1"
reqwest = { workspace = true, features = ["blocking"] }
lazy_static = { workspace = true }
ctrlc = { version = "3.5.0", features = ["termination"] }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
gethostname = "1.0.2"
regex = { workspace = true }
num-format = "0.4.4"
anyhow = { workspace = true }
globset = { workspace = true }
nav-types = "0.5.2"
trait-set = { workspace = true }
hashbrown = { workspace = true }
flate2 = { workspace = true }
miniz_oxide = { workspace = true }
memchr = { workspace = true }
kanal = {workspace = true }
image = { workspace = true }

image-compare = { version = "0.5.0" }
imageproc = { version = "0.25.0" }
linreg = { version = "0.2.0" }
tiff = { version = "0.10.3" }

aws-config = { version = "1.8.6", features = ["behavior-version-latest"], optional = true }
aws-sdk-s3 = { version = "1.105.0", features = ["rt-tokio"], optional = true }
aws-smithy-types = { version = "1.3.2", features = ["serde-serialize"], optional = true }
aws-smithy-types-convert = { version = "0.60.9", features = ["convert-chrono"], optional = true }
aws-smithy-runtime-api = { version = "1.9.0", optional = true }

dhat = { version = "0.3.3", optional = true }

# used by aws-smithy in version 0.6.5, which runs into a "unknown feature stdarch_arm_crc32" error with newer nightly toolchains
# the alternative is to revert to an older toolchain with a rust-toolchain.toml but then we need to install all tools (such
# as rust-analyzer) for it too.
crc32c = { version = "0.6.7", optional = true }

odin_build = { workspace = true }

[build-dependencies]
odin_build = { workspace = true }

[features]
s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:aws-smithy-types-convert", "dep:aws-smithy-runtime-api", "dep:aws-smithy-types", "dep:crc32c"]
slack_admin = []
dhat = ["dep:dhat"]

[package.metadata.odin_configs]
slack_admin = { file = "slack_admin.ron" }