[package]
name = "odin_dem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "serve_dem"
path = "src/bin/serve_dem.rs"

[[bin]]
name = "get_dem"
path = "src/bin/get_dem.rs"


[dependencies]

# our ODIN crates
odin_build = { workspace = true }
odin_common = { workspace = true }
odin_gdal = { workspace = true }
odin_server = { workspace = true }

lazy_static = "*"
structopt = "*"
tokio-util = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
http = "*"
serde_derive = "*"
anyhow = "*"


tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }

[features]

## inline crate-specific resources (configs and assets) into the executable (see odin_build)
embedded_resources = []