[package]
name = "odin_dem"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "serve_dem"
path = "src/bin/serve_dem.rs"

[[bin]]
name = "get_dem"
path = "src/bin/get_dem.rs"


[dependencies]

# our ODIN crates
odin_build = { workspace = true }
odin_common = { workspace = true }
odin_gdal = { workspace = true }
odin_server = { workspace = true }

lazy_static = { workspace = true }
structopt = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "*", features = ["env-filter"] }
http = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }

[features]

## inline crate-specific resources (configs and assets) into the executable (see odin_build)
embedded_resources = []