[package]
name = "odin_fems"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }

chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
uom = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
itertools = { workspace = true }

struct-field-names-as-array = { version = "0.3" }
structstruck = { version = "0.5.1" }


# workspace dependencies
odin_common = { workspace = true }
odin_actor = { workspace = true }
odin_action = { workspace = true }
odin_build = { workspace = true }
odin_macro = { workspace = true }
odin_job = { workspace = true }
odin_dem = { workspace = true }
odin_server = { workspace = true }
odin_cesium = { workspace = true }

[build-dependencies]
odin_build = { workspace = true }

[features]
## inline crate-specific resources (configs and assets) into the executable (see odin_build)
embedded_resources = []
