[package]
name = "odin_gdal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simplewarp"
path = "src/bin/simplewarp.rs"

[[bin]]
name = "utm_bbox"
path = "src/bin/utm_bbox.rs"

[[bin]]
name = "translate_bbox"
path = "src/bin/translate_bbox.rs"

[dependencies]
odin_common = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
gdal = { workspace = true }
gdal-sys = { workspace = true }

lazy_static = "*"
libc = "*"
geo = "*"
anyhow = "*"
structopt = "*"
meshgridrs = "*"
ndarray = "*"

