[package]
name = "odin_gdal"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simplewarp"
path = "src/bin/simplewarp.rs"

[[bin]]
name = "utm_bbox"
path = "src/bin/utm_bbox.rs"

[[bin]]
name = "translate_bbox"
path = "src/bin/translate_bbox.rs"

[dependencies]
odin_common = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

gdal-sys = { workspace = true }
gdal = { workspace = true }

lazy_static = { workspace = true }
libc = "0.2.172"
geo = {workspace = true }
anyhow = { workspace = true }
structopt = { workspace = true }
meshgridrs = "0.1.1"
ndarray = "0.16.1"
