[package]
name = "odin_gdal"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simplewarp"
path = "src/bin/simplewarp.rs"

[[bin]]
name = "utm_bbox"
path = "src/bin/utm_bbox.rs"

[[bin]]
name = "translate_bbox"
path = "src/bin/translate_bbox.rs"

[[bin]]
name = "crop_nodata"
path = "src/bin/crop_nodata.rs"

[dependencies]
odin_common = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

gdal-sys = { workspace = true }
gdal = { workspace = true }

lazy_static = { workspace = true }
geo = {workspace = true }
anyhow = { workspace = true }
structopt = { workspace = true }
bit-set = { workspace = true }
ndarray = { workspace = true }

static_init = "1.0.4"
libc = "0.2.174"
meshgridrs = "0.1.1"
