[package]
name = "odin_goesr"
version = "0.1.0"
edition = "2021"
build = "../build_resources.rs"

[[bin]]
name = "read_goesr_hotspots"
path = "src/bin/read_goesr_hotspots.rs"

[[bin]]
name = "download_goesr_data"
path = "src/bin/download_goesr_data.rs"

[dependencies]
# our ODIN crates
odin_build = { workspace = true }
odin_actor = { workspace = true }
odin_common = { workspace = true, features = ["s3"] }
odin_macro = { workspace = true }
odin_gdal = { workspace = true }
#odin_server = { workspace = true }

serde_json = "*"
ron = "*"
serde = { version = "*", features = ["rc"] }
serde_with = "*" 
anyhow = "*"
chrono = { version = "*", features = ["serde"] }
thiserror = "*"
tokio = { version = "*", features = ["full"] }
meshgridrs = "*"
uom = { version = "*", features = ["serde", "f32"] }
paste = "*"
futures = "*"
tracing = "*"
structopt = "*"
lazy_static = "*"
regex = "*"

[build-dependencies]
odin_build = { workspace = true }

[package.metadata.odin_configs]
goesr = { file="goesr.ron" }
goes_16_fdcc = { file="goes_16_fdcc.ron" }
goes_18_fdcc = { file="goes_18_fdcc.ron" }

[features]
embedded_resources = []
